# optimizer-deep-dive

./: .gitignore  DEMO_GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: optimizer_deep_dive.ipynb
src/: models.py  optimizers.py  visualization.py
tests/: test_models.py  test_optimizers.py
