[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "optimizer-deep-dive"
version = "0.1.0"
description = "From-scratch implementations of BGD, SGD, and Adam optimizers with neural network backpropagation"
authors = [{ name = "Chris Schmidt" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["src*"]
